--- a/res/layout/config.xml
+++ b/res/layout/config.xml
@@ -36,6 +36,22 @@
                 android:layout_weight="1"/>
     </LinearLayout>
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="偏转角度："/>
+        <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/et_angle"
+                android:layout_weight="1"/>
+    </LinearLayout>
+
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
